--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>vip.floatationdevice</groupId>
     <artifactId>progmgr</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>progmgr</name>
     <description>Demo project for Spring Boot</description>
     <properties>
