~2M lombok.jar vs my implementation? not worth it

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>hutool-json</artifactId>
             <version>5.8.15</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
