--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,10 @@
     </parent>
     <groupId>vip.floatationdevice</groupId>
     <artifactId>progmgr</artifactId>
-    <version>1.0.1</version>
+    <version>2.0.0</version>
     <name>progmgr</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Simple web application for managing the program list used by the spring festival gala </description>
+    <url>https://github.com/MCUmbrella/progmgr</url>
     <properties>
         <java.version>17</java.version>
     </properties>
