--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
             <version>3.40.1.0</version>
         </dependency>
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.5.13</version>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
