--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>vip.floatationdevice</groupId>
     <artifactId>progmgr</artifactId>
-    <version>3.0.0</version>
+    <version>3.0.0-mysql</version>
     <name>progmgr</name>
     <description>Simple web application for managing the program list used by the spring festival gala</description>
     <url>https://github.com/MCUmbrella/progmgr</url>
@@ -32,14 +32,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.40.1.0</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.3.0</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
